--- a/PhotoApp.xcodeproj/xcshareddata/xcschemes/PhotoApp.xcscheme
+++ b/PhotoApp.xcodeproj/xcshareddata/xcschemes/PhotoApp.xcscheme
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
    LastUpgradeVersion = "1330"
-   version = "1.3">
+   version = "1.7">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
@@ -28,6 +28,18 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
       codeCoverageEnabled = "YES">
+      <TestPlans>
+         <TestPlanReference
+            reference = "container:PhotoAppUITests/PhotoApp-UITestsPlan.xctestplan"
+            default = "YES">
+         </TestPlanReference>
+         <TestPlanReference
+            reference = "container:PhotoAppTests/PhotoApp-UnitTests.xctestplan">
+         </TestPlanReference>
+         <TestPlanReference
+            reference = "container:PhotoApp-MainTestPlan.xctestplan">
+         </TestPlanReference>
+      </TestPlans>
       <Testables>
          <TestableReference
             skipped = "NO"
